# hs-torrent

./: README.md  hs-torrent.cabal  stack.yaml
app/: Main.hs
src/: HTTPClient.hs  Lib.hs  Prelude.hs
src/Data/: BEncode.hs  BEncoded.hs  HTorrent.hs  Meta.hs
src/Data/HTorrent/: FileInfo.hs  Info.hs  MetaInfo.hs
test/Data/: BEncodedSpec.hs  MetaSpec.hs
