name:                hs-torrent
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/emanuelmd/hs-torrent#readme
license:             BSD3
license-file:        LICENSE
author:              Emanuel M
maintainer:          emanuel.moldovan@secfi.com
copyright:           2019 Emanuel Moldovan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
                     , Data.BEncode
                     , Data.HTorrent
                     , Data.HTorrent.MetaInfo
                     , Data.HTorrent.Info
                     , Data.HTorrent.FileInfo
  other-modules:       Prelude
  build-depends:       base
                     , protolude
                     , text
                     , bytestring
                     , containers
                     , http-client
                     , parsec
                     , lens
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude
                     , RecordWildCards

executable hs-torrent-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hs-torrent
                     , protolude
                     , directory
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite hs-torrent-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hs-torrent
                     , protolude
                     , hspec
                     , containers
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/emanuelmd/hs-torrent
